# oceAns

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_mixer.cmake
res/: Bots.xml  credits.txt  lvl1.lvl  lvl1.xml  lvl2.lvl  lvl2.xml  lvl3.lvl  lvl3.xml  own_tileset_slope.txt
res/Data/: Aal.spr  Bots.txt  Hai.spr  Krabbe.spr  Kugelfisch.spr  Meerjungfrau.spr  Miene.spr  Muschel.spr  Qualle.spr  Schlange.spr  Schlange_klein.spr  Schwarm.spr  Schwertfisch.spr  Seeigel.spr  Seepferd.spr  Seestern.spr  Spriteseigenschaften.txt  mov_Boot.spr  stat_Boot.spr
res/Data/Bosse/: Roboterfisch.spr  Tentakel.spr
res/Data/Default_Bots/: Augenfisch.spr  BlauFisch.spr  Blumenkohlfisch.spr  DreiAuge.spr  GeistFisch.spr  GlubschAuge.spr  Grinser.spr  Knochenhai.spr  KnutschFisch.spr  Nyan.spr  Rochen.spr  RotFisch.spr  SpringFisch.spr  Uboot_rot.spr  Wal.spr  ZitronenFisch.spr
res/Data/Explosionen/: Explosion.spr  Explosion_rauch.spr  Projektil_ex.spr  blau.spr  blau_gross.spr  gruen.spr  orange.spr  pink.spr  rot.spr
res/Data/Projektile/: Angaben.txt  Anker.spr  Ball_blau.spr  Ball_blau_gross.spr  Ball_gold.spr  Ball_gold_gross.spr  Ball_gruen.spr  Ball_gruen_gross.spr  Ball_lila.spr  Ball_lila_gross.spr  Ball_rot.spr  Ball_rot_gross.spr  Flamme_180.spr  Stachel_0.spr  Stachel_180.spr  Stachel_225.spr  Stachel_270.spr  Stachel_315.spr  flame.spr
src/game/: Actor.cpp  Actor.hpp  AnimatedRenderable.cpp  AnimatedRenderable.hpp  Boss_Roboterfisch.cpp  Boss_Roboterfisch.hpp  Boss_Tentakel.cpp  Boss_Tentakel.hpp  Bot.cpp  Bot.hpp  Bot_Aal.cpp  Bot_Aal.hpp  Bot_Hai.cpp  Bot_Hai.hpp  Bot_Krabbe.cpp  Bot_Krabbe.hpp  Bot_Kugelfisch.cpp  Bot_Kugelfisch.hpp  Bot_Meerjungfrau.cpp  Bot_Meerjungfrau.hpp  Bot_Mine.cpp  Bot_Mine.hpp  Bot_Muschel.cpp  Bot_Muschel.hpp  Bot_Qualle.cpp  Bot_Qualle.hpp  Bot_Schlange.cpp  Bot_Schlange.hpp  Bot_Schlange_klein.cpp  Bot_Schlange_klein.hpp  Bot_Schwarm.cpp  Bot_Schwarm.hpp  Bot_Schwertfisch.cpp  Bot_Schwertfisch.hpp  Bot_Seeigel.cpp  Bot_Seeigel.hpp  Bot_Seepferdchen.cpp  Bot_Seepferdchen.hpp  Bot_Seestern.cpp  Bot_Seestern.hpp  (+54 more)
